<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical">

    <TextView
        style="@style/styleTieuDe"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/ttbh" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/ma_bh" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:background="@drawable/edit_background"

            android:id="@+id/editTextMaBH"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawableStart="@drawable/ic_mabuoidien_icon" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/ten_bh" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:background="@drawable/edit_background"

            android:id="@+id/editTextTenBH"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawableStart="@drawable/ic_mabuoidien_icon" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/ma_ns" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Spinner
            android:id="@+id/spinnerDanhSachNhacSi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Url" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:background="@drawable/edit_background"

            android:id="@+id/editTextURL"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawableStart="@drawable/ic_mabuoidien_icon" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSua"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/sua" />

        <Button
            android:id="@+id/btnXoa"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/xoa" />

        <Button
            android:id="@+id/btnTroVe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/tro_ve" />


    </LinearLayout>
</LinearLayout>