<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical">

    <TextView
        style="@style/styleTieuDe"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/tbh" />

    <TextView
        android:fontFamily="@font/poppins_regular"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ten_bh" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <EditText
            android:background="@drawable/edit_background"
            android:id="@+id/txtTenBH"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawableStart="@drawable/ic_mabuoidien_icon" />
    </LinearLayout>

    <TextView
        android:fontFamily="@font/poppins_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Url" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:background="@drawable/edit_background"
            android:id="@+id/textViewURL"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawableStart="@drawable/ic_mabuoidien_icon" />
    </LinearLayout>

    <TextView
        android:fontFamily="@font/poppins_regular"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ma_ns" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/spinnerDSMNS"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnThem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/them" />

        <Button
            android:id="@+id/btnTroVe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/tro_ve" />

    </LinearLayout>
</LinearLayout>