<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/lnMain"
    android:gravity="center"
    android:background="@color/dark"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Danh sách bài hát"
        android:textSize="30dp"
        android:fontFamily="@font/opeansans_cond_light"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/blue"
        android:layout_marginBottom="30dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <android.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="20dp"
            android:textColor="@color/blue"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginRight="20dp"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/img"
            />

        <TextView
            android:fontFamily="@font/poppins_regular"
            android:textSize="20dp"
            android:textColor="@color/blue"
            android:layout_marginRight="20dp"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/ma_bh"
            />

        <TextView
            android:fontFamily="@font/poppins_regular"
            android:textSize="20dp"
            android:textColor="@color/blue"
            android:layout_marginRight="20dp"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/ten_bh"
            />

        <TextView
            android:textSize="20dp"
            android:textColor="@color/blue"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/poppins_regular"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/ma_ns"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_height="350dp">
        <ListView
            android:divider="@null"
            android:dividerHeight="0dip"
            android:id="@+id/listViewDanhSachBaiHat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:background="@drawable/custom_button"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:id="@+id/btnTK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tk" />
    </LinearLayout>

</LinearLayout>