<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tác phẩm"
        android:textSize="30dp"
        android:fontFamily="@font/opeansans_cond_light"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/blue"
        android:layout_marginBottom="30dp">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:id="@+id/ivTitle"
            android:layout_margin="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp">
            <TextView
                android:fontFamily="@font/opeansans_cond_light"
android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvTenNS"/>
            <TextView
                android:fontFamily="@font/opeansans_cond_light"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvGioiThieu"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:textSize="30dp"
        android:textColor="@color/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/opeansans_cond_light"
        android:text="Danh sách bài hát"

        android:textStyle="bold">

    </TextView>
    <LinearLayout
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="20dp"
            android:textColor="@color/blue"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginRight="20dp"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/img"
            />

        <TextView
            android:fontFamily="@font/poppins_regular"
            android:textSize="20dp"
            android:textColor="@color/blue"
            android:layout_marginRight="20dp"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/ma_bh"
            />

        <TextView
            android:fontFamily="@font/poppins_regular"
            android:textSize="20dp"
            android:textColor="@color/blue"
            android:layout_marginRight="20dp"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/ten_bh"
            />

        <TextView
            android:textSize="20dp"
            android:textColor="@color/blue"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/poppins_regular"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/ma_ns"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ListView
            android:id="@+id/lvTacPham"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            />
    </LinearLayout>
</LinearLayout>